# herbie

./: .gitignore  .gitmodules  CLAUDE.md  SCHEMA_REFACTOR_NOTES.md  TELEMETRY_API.md  package.json  pnpm-lock.yaml  turbo.json
apps/dashboard/: package.json
apps/dashboard/app/: layout.tsx  page.tsx
apps/dashboard/components/: app-sidebar.tsx  nav-user.tsx
apps/dashboard/components/ui/: sidebar.tsx
apps/dashboard/convex/: http.ts  importer.ts  schema.ts
apps/dashboard/convex/_generated/: api.d.ts
apps/tracker/: .gitignore  INTEGRATION.md  README.md  USAGE.md  build_windows.py  dev_macos.py  herbie_agent_launcher.py  package.json  pyproject.toml  requirements.txt
apps/tracker/.claude/: settings.local.json
apps/tracker/examples/: __init__.py  snapshot_collector_example.py
apps/tracker/herbie_agent/: __init__.py  api_client.py  lap_validator.py  settings_manager.py  settings_window.py  snapshot_collector.py  telemetry_agent.py  telemetry_collector.py  tray_gui.py  utils.py
apps/tracker/scripts/: README.md  __init__.py  import_telemetry.py
apps/tracker/tracker/: api_connector.py  main.py  snapshot_csv_logger.py
apps/tracker/tracker/adapter/: rf2_data.py
apps/tracker/tracker/telemetry_logs/: lap_1.csv  lap_1_brake.csv  lap_1_engine.csv  lap_1_inputs.csv  lap_1_lap.csv  lap_1_session.csv  lap_1_switch.csv  lap_1_timing.csv  lap_1_tyre.csv  lap_1_vehicle.csv  lap_1_wheel.csv  lap_2_brake.csv  lap_2_electric_motor.csv  lap_2_engine.csv  lap_2_inputs.csv  lap_2_lap.csv  lap_2_session.csv  lap_2_switch.csv  lap_2_timing.csv  lap_2_tyre.csv  lap_2_vehicle.csv  lap_2_wheel.csv  lap_3_brake.csv  lap_3_engine.csv  lap_3_inputs.csv  lap_3_lap.csv  lap_3_session.csv  lap_3_switch.csv  lap_3_timing.csv  lap_3_tyre.csv  lap_3_vehicle.csv  lap_3_wheel.csv  lap_4_brake.csv  lap_4_engine.csv  lap_4_inputs.csv  lap_4_lap.csv  lap_4_session.csv  lap_4_switch.csv  lap_4_timing.csv  lap_4_tyre.csv  (+44 more)
apps/web/: drizzle.config.ts  middleware.ts  package.json
apps/web/app/: page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/(auth)/auth/callback/: route.ts
apps/web/app/(auth)/sign-in/: page.tsx
apps/web/app/(auth)/sign-up/: page.tsx
apps/web/app/(main)/: _actions.tsx  layout.tsx  page.tsx
apps/web/app/(main)/analyze/: page.tsx
apps/web/app/(main)/analyze/laps/[id]/: _actions.ts  chart-grid.tsx  page.tsx
apps/web/app/(main)/analyze/laps/[id]/_components/: session-notebook-types.ts  session-notebook.tsx  telemetry-view.tsx
apps/web/app/(main)/community/: _actions.ts  page.tsx
apps/web/app/(main)/community/_components/: community-lap-browser.tsx
apps/web/app/(main)/laps/: _actions.tsx  page.tsx
apps/web/app/(main)/laps/_components/: filtered-laps-list.tsx  lap-filters.tsx
apps/web/app/(main)/laps/all/: page.tsx
apps/web/app/(main)/laps/cars/: _actions.tsx  page.tsx
apps/web/app/(main)/laps/cars/[vehicleId]/: page.tsx
apps/web/app/(main)/laps/categories/: _actions.tsx  page.tsx
apps/web/app/(main)/laps/categories/[categoryId]/: page.tsx
apps/web/app/(main)/laps/tracks/: _actions.tsx  page.tsx
apps/web/app/(main)/laps/tracks/[trackId]/: page.tsx
apps/web/app/(main)/workspace/data-sources/: page.tsx
apps/web/app/(main)/workspace/notifications/: page.tsx
apps/web/app/api/breadcrumbs/: route.ts
apps/web/app/api/telemetry/: utils.ts
apps/web/app/api/telemetry/conditions/: route.ts
apps/web/app/api/telemetry/data/: route.ts
apps/web/app/api/telemetry/laps/: route.ts
apps/web/app/api/telemetry/sessions/: route.ts
apps/web/app/api/telemetry/summary/: route.ts
apps/web/app/api/telemetry/timing/: route.ts
apps/web/app/api/telemetry/vehicles/: route.ts
apps/web/components/: app-sidebar-wrapper.tsx  app-sidebar.tsx  community-lap-card.tsx  lap-card.tsx  nav-config.ts  nav-main.tsx  nav-quick-actions.tsx  nav-recent-activity.tsx  nav-secondary.tsx  nav-user.tsx  providers.tsx  site-header.tsx  telemetry-chart-tooltip.tsx
apps/web/components/metrics/: chart.tsx  track-map-canvas.tsx  track-map.tsx
apps/web/db/: schema.ts
apps/web/db/migrations/: 0000_milky_maria_hill.sql
apps/web/db/migrations/meta/: 0000_snapshot.json  _journal.json
apps/web/db/queries/: users.ts
apps/web/docs/: USER_SYNC.md
apps/web/lib/: auth-sync.ts  breadcrumbs.ts  delta-calculator.ts  delta-formatter.ts
apps/web/lib/track-map/: utils.ts
apps/web/prisma/: schema.prisma
apps/web/prisma/migrations/20250614052857_initial_migration/: migration.sql
apps/web/prisma/migrations/20250624000000_session_notes/: migration.sql
apps/web/scripts/: seed-csv.ts
docs/: access-control.md  ui-migration-checklist.md
