[project]
name = "herbie-tracker"
version = "0.1.0"
description = "rFactor 2 telemetry tracker that captures racing data to CSV"
requires-python = ">=3.13"
dependencies = []

# Note: Windows dependency pyRfactor2SharedMemory should be installed separately
# On Windows: uv pip install ../../../pyRfactor2SharedMemory

[project.scripts]
tracker = "tracker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["tracker"]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "herbie-tracker"
version = "1.0.0"
description = "A professional Windows telemetry agent for collecting rFactor 2 telemetry data and sending it to the Herbie backend API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Herbie Team" }
]

dependencies = [
    # GUI Framework
    "PyQt6>=6.6.0",

    # System Tray Integration
    "pystray>=0.19.5",

    # HTTP Client for API requests
    "httpx>=0.25.0",

    # Configuration Management
    "pydantic>=2.5.0",

    # Structured Logging
    "structlog>=23.2.0",

    # Image Processing for icons
    "pillow>=10.0.0",

    # Application directories
    "appdirs>=1.4.4",

    # Process monitoring
    "psutil>=5.9.0",

    # Async support
    "asyncio-mqtt>=0.13.0",

    # JSON handling
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
herbie-tracker = "tracker.main:run_logger"
herbie-agent = "herbie_agent.telemetry_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracker", "herbie_agent"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
